# data-engineering-bootcamp

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  hive-metastore.Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
bootcamp/: __init__.py  databricks_compat.py
bootcamp/dbt/: .user.yml
bootcamp/dbt/airbnb/: dbt_project.yml
bootcamp/dbt/init/: 01_create_schemas.sql  02_load_data.sh
dagster_airbnb/: assets.py  definitions.py  project.py
data/: config.py
dbt/airbnb/: dbt_project.yml  profiles.yml
dbt/airbnb/analyses/: full_moon_no_sleep.sql
dbt/airbnb/models/: schema.yml  sources.yml
dbt/airbnb/models/dim/: dim_hosts_cleansed.sql  dim_listings_cleansed.sql  dim_listings_w_hosts.sql
dbt/airbnb/models/fct/: fct_reviews.sql
dbt/airbnb/models/mart/: mart_fullmoon_reviews.sql
dbt/airbnb/models/src/: src_hosts.sql  src_listings.sql  src_reviews.sql
dbt/airbnb/tests/generic/: minimum_row_count.sql
dbt/init/: 01_create_schemas.sql
docs/: 1-delta-tables-notes.md  2-dbt-notes.md  3-theory-notes.md  4-streaming-notes.md  notes.md
notebooks/: 02-spark_write_save.ipynb  06-spark_transformations_python_sql.ipynb  07-databricks_sql.ipynb  08-delta_table_caching.ipynb  09-delta_table_paritioning.ipynb  1-fx-learn-spark.ipynb  1-spark-basics.ipynb  10-delta_table_paritioning_zordering.ipynb  11-streaming-word-count.py  12-streaming-invoices.py  6-spark_transformations_python_sql.ipynb
pgadmin/: pgpass  servers.json
scripts/: download_airbnb_data.py  download_datasets.py
