[project]
name = "data-engineering-bootcamp"
version = "0.1.0"
description = "Data Engineering Bootcamp - Learning Spark, Delta Lake, and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pyspark==3.5.3",
    "delta-spark==3.2.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]
