[project]
name = "data-engineering-bootcamp"
version = "0.1.0"
description = "Data Engineering Bootcamp - Learning Spark, Delta Lake, and more"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pyspark==3.5.3",
    "delta-spark==3.2.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "dbt-postgres>=1.9.1",
    "dbt-autofix>=0.17.4",
    "dagster-dbt>=0.28.4",
    "dagster-webserver>=1.12.4",
    "dagster>=1.12.4",
]

[tool.dagster]
module_name = "dagster_airbnb.definitions"
code_location_name = "dagster_airbnb"
